<resources>
    <string name="app_name">InternshipMay</string>
    <string name="login">Login Here</string>
    <string name="welcome">Welcome Back you\'ve \nbeen missed</string>
    <string name="email">Email or Contact</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create New Account</string>
    <string name="login_button">Login</string>

    <string name="signup">Create an Account</string>
    <string name="signup_welcome">Create an account so you can explore all the \nexciting jobs</string>

</resources>