<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#81545455">


        <TextView
            style="@style/text_20"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/login"
            android:textColor="@color/blue_login"
            />

        <TextView
            style="@style/text_20"
            android:text="@string/welcome"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />


        <EditText
            android:id="@+id/main_email"
            style="@style/edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_lock"

            />


        <EditText
            android:id="@+id/main_password"
            style="@style/edittext"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/_5sdp"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/main_forget_password"
            style="@style/text_15"
            android:text="@string/forget_password"
            android:textColor="@color/blue_login"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_20sdp"
            />


        <TextView
            android:id="@+id/main_create_account"
            style="@style/text_15"
            android:text="@string/create_account"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_gravity="center"
            />


        <Button
            android:id="@+id/main_login"
            style="@style/button"
            app:backgroundTint="@null"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_button"
            android:layout_marginBottom="@dimen/_20sdp"
            />

    </LinearLayout>


</FrameLayout>