<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            style="@style/text_20"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/signup"
            android:textColor="@color/blue_login"
            />

        <TextView
            style="@style/text_20"
            android:text="@string/signup_welcome"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textSize="@dimen/_15sdp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />



        <EditText
            android:id="@+id/signup_name"
            style="@style/edittext"
            android:hint="Name"
            android:layout_marginBottom="@dimen/_7sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_lock"

            />

        <EditText
            android:id="@+id/signup_email"
            style="@style/edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/_7sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_lock"

            />



        <EditText
            android:id="@+id/signup_contact"
            style="@style/edittext"
            android:hint="Contact Number"
            android:inputType="phone"
            android:layout_marginBottom="@dimen/_7sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_lock"
            android:maxLength="10"

            />



        <EditText
            android:id="@+id/signup_password"
            style="@style/edittext"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/_7sdp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/_5sdp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/signup_cnfpassword"
            style="@style/edittext"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_lock"

            />


        <TextView
            android:id="@+id/signup_have_account"
            style="@style/text_15"
            android:text="Already Have An Account"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_gravity="center"
            />


        <Button
            android:id="@+id/signup_button"
            style="@style/button"
            app:backgroundTint="@null"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="Signup"
            android:layout_marginBottom="@dimen/_20sdp"
            />


    </LinearLayout>



</ScrollView>